--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" href="juju.jpg">
+    <link rel="icon" href="juju.jpg">   
 </head>
 <body>
     <link rel="stylesheet" href="colores.css">
+    <div>Hola puta</div>
+    <div>Hola como estas?</div>
     
 </body>
 </html>
