--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="colores.css">
     <div>Hola puta</div>
     <div>Hola como estas?</div>
+    <div>Bien y tu</div>
+
     
 </body>
 </html>
