--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
 </head>
 <body>
     <link rel="stylesheet" href="colores.css">
-    <div>Hola puta</div>
-    <div>Hola como estas?</div>
-    <div>Bien y tu</div>
-    <div>Daviana te amo mk</div>
-    <div>Tu a mi no?</div>
-    <div>que va ombe asi no</div>
-    <div>pipipipipi</div>
-    <div>no se</div>
-
+    <div><img src="juju.jpg" ></div>
+    
     
 </body>
 </html>
