--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <link rel="stylesheet" href="colores.css">
     <div><img src="juju.jpg" ></div>
+    <div>Hola</div>
     
     
 </body>
